--- a/ress/css/style.css
+++ b/ress/css/style.css
@@ -3,12 +3,17 @@
     src: url(../fonts/Fira_Sans/FiraSans-Light.ttf);
   }
 
+  @font-face {
+    font-family:firathin ;
+    src: url(../fonts/Fira_Sans/FiraSans-Thin.ttf);
+  }
+
 body{
     margin: 0px;
     padding: 0px;
 }
 #dashboard{
-    background: rgb(17, 17, 58);
+    background: rgb(4, 4, 39);
 }
 
 .dash-report .d-report img{
@@ -52,6 +57,7 @@ body{
 
 .dash-work{
     margin: 30px;
+    display: flex;
 }
 
 .dash-work .work{
@@ -66,17 +72,32 @@ body{
     font-family:firaBlack; 
     background: #4f3cac;
     border-radius: 10px;
-    padding: 10px;
-     
+    padding: 25px;        
+}
 
+.dash-work .work .d-work .dots{
+    float: right;
+}
+.dash-work .work .d-work .span-work{
+   font-weight: bold;
+   font-size: 12px;
 
-           
 }
 .dash-work .work h2{
     line-height: 2px;
+    font-size: 40px;
 }
+
+.dash-work .work p{
+    font-family:firathin;
+}
+
 
 .dashboard-conatainer{
     display: flex;
     
+}
+
+.m-work{
+    margin-top: 25px;
 }
