--- a/ress/css/style.css
+++ b/ress/css/style.css
@@ -50,7 +50,7 @@ body{
 }
 .dash-report{
     background: rgb(38, 28, 88);
-    width: 15%;
+    width: 25%;
     margin: 30px;
     border-radius: 10px;
 }
@@ -58,10 +58,12 @@ body{
 .dash-work{
     margin: 30px;
     display: flex;
+    justify-content: space-between;
+    width: 100%;
 }
 
 .dash-work .work{
-    background: rgb(248, 140, 98);
+    
     border-radius: 10px;
     width: 180px;
     padding-top: 30px;
@@ -95,9 +97,19 @@ body{
 
 .dashboard-conatainer{
     display: flex;
+    padding-top: 100px;
+    padding-bottom: 100px;
+    padding-left: 50px;
+    padding-right: 50px;
     
 }
 
 .m-work{
     margin-top: 25px;
+}
+.dash-works > div:first-child{
+    background: rgb(248, 140, 98);
+}
+.dash-works > div:nth-child(2){
+    background: rgb(133, 248, 98);
 }
