--- a/ress/css/style.css
+++ b/ress/css/style.css
@@ -55,10 +55,12 @@ body{
     border-radius: 10px;
 }
 
+/* ====== styling for dash-work==== */
+
 .dash-work{
     margin: 30px;
     display: flex;
-    justify-content: space-between;
+    justify-content: space-around;
     width: 100%;
 }
 
@@ -97,10 +99,10 @@ body{
 
 .dashboard-conatainer{
     display: flex;
-    padding-top: 100px;
-    padding-bottom: 100px;
-    padding-left: 50px;
-    padding-right: 50px;
+    padding-top: 120px;
+    padding-bottom: 120px;
+    padding-left: 100px;
+    padding-right: 100px;
     
 }
 
@@ -112,4 +114,42 @@ body{
 }
 .dash-works > div:nth-child(2){
     background: rgb(133, 248, 98);
+}
+.dash-wor > div:first-child{
+    background: rgb(78, 221, 246);
+}
+.dash-wor > div:nth-child(2){
+    background: rgb(103, 12, 139);
+}
+.dash-w > div:first-child{
+    background: rgb(241, 68, 189);
+}
+.dash-w > div:nth-child(2){
+    background: rgb(241, 238, 31);
+}
+
+
+@media only screen and (max-width: 768px) {
+    /* For mobile phones: */
+    .dash-work{
+        margin: 0px;
+        flex-direction: column;
+        width: 100%;
+    }
+
+    .dashboard-conatainer{
+        flex-direction: column;
+        padding-top: 0px;
+        padding-bottom: 0px;
+        padding-left: 0px;
+        padding-right: 0px; 
+        
+    }
+
+    .dash-report{
+        background: rgb(38, 28, 88);
+        width: 50%;
+        margin: 30px;
+        border-radius: 10px;
+    }
 }
