--- a/ress/css/style.css
+++ b/ress/css/style.css
@@ -64,8 +64,7 @@ body{
     width: 100%;
 }
 
-.dash-work .work{
-    
+.dash-work .work{  
     border-radius: 10px;
     width: 180px;
     padding-top: 30px;
@@ -82,11 +81,12 @@ body{
 .dash-work .work .d-work .dots{
     float: right;
 }
+
 .dash-work .work .d-work .span-work{
    font-weight: bold;
    font-size: 12px;
-
 }
+
 .dash-work .work h2{
     line-height: 2px;
     font-size: 40px;
@@ -96,14 +96,12 @@ body{
     font-family:firathin;
 }
 
-
 .dashboard-conatainer{
     display: flex;
     padding-top: 120px;
     padding-bottom: 120px;
     padding-left: 100px;
-    padding-right: 100px;
-    
+    padding-right: 100px;  
 }
 
 .m-work{
@@ -131,25 +129,81 @@ body{
 
 @media only screen and (max-width: 768px) {
     /* For mobile phones: */
+    .dashboard-conatainer{
+        flex-direction: column;
+        padding-top: 100px;
+        padding-bottom: 0px;
+        padding-left: 30px;
+        padding-right:30px;  
+    }
+    .d-flex{
+        display: flex;
+    }
+    .m-r{
+        margin-left: 10px;
+    }
+    .dash-report .d-report{
+        padding-top: 35px;
+        padding-bottom: 65px;
+        color: #fff;
+        font-family:firaBlack;
+        background: #4f3cac;
+        border-radius: 20px;
+        height: 10vh;
+        font-size: 20px;
+    }
+    .dash-report{
+        background: rgb(38, 28, 88);
+        width: 100%;
+        margin: 0px;
+        border-radius: 10px;
+    }
+    .dash-report .d-report img{
+        width: 75px;
+        height: 75px;
+        border-radius: 50%;
+        border: 3px solid white;
+        margin-top: 10px;
+    }
+    .day-spaces{
+        justify-content: space-between;
+    }
+
+    /* ===== styling for the three rows to column ==== */
+
     .dash-work{
         margin: 0px;
         flex-direction: column;
         width: 100%;
     }
 
-    .dashboard-conatainer{
-        flex-direction: column;
-        padding-top: 0px;
-        padding-bottom: 0px;
-        padding-left: 0px;
-        padding-right: 0px; 
-        
+    .dash-work .work{  
+        border-radius: 10px;
+        width: 100%;
+        padding-top: 30px;
+        margin-bottom: 30px;
     }
 
-    .dash-report{
-        background: rgb(38, 28, 88);
-        width: 50%;
-        margin: 30px;
-        border-radius: 10px;
+    .dash-work{
+        margin-top: 30px;
+        display: flex;
+        justify-content: space-around;
+        width: 100%;
     }
+
+    .dash-work .work .d-work{
+        color: #fff;
+        font-size: 20px;
+        font-family:firaBlack; 
+        background: #4f3cac;
+        border-radius: 10px;
+        padding: 25px;        
+    }
+
+    .dash-work .work .d-work .span-work{
+        font-weight: bold;
+        font-size: 20px;
+     }
+
+    
 }
