--- a/ress/css/style.css
+++ b/ress/css/style.css
@@ -190,6 +190,7 @@ body{
         display: flex;
         justify-content: space-around;
         width: 100%;
+        margin-bottom: 60px;
     }
 
     .dash-work .work .d-work{
