--- a/ress/css/style.css
+++ b/ress/css/style.css
@@ -21,6 +21,7 @@
   }
   
   [data-theme="dark"] {
+    --moon-color: #fff;
     --bg-color: #040427;
     --font-color: #efefef;
     --title-color: #fec150;
@@ -29,10 +30,31 @@
     --main-bg: rgba(25, 25, 25, 0.4);
   }
 
+
+  /* :root {
+    --background-color: #fff;
+    --text-color: #000;
+  }
+
+  body {
+    background-color: var(--background-color);
+    color: var(--text-color);
+  }
+
+  [data-theme="dark"] {
+    --background-color: #3F3F3F;
+    --text-color: #fff;
+  } */
+
 body{
     margin: 0px;
     padding: 0px;
 }
+
+.moon{
+    color: var(--moon-color);
+}
+
 #dashboard{
     background: var(--bg-color);
 }
